# Mycleix-Mail

./: LICENSE  shell.nix
cli/: Cargo.toml
cli/src/: client.rs  config.rs  main.rs  types.rs
cli/src/commands/: did.rs  export.rs  inbox.rs  init.rs  mod.rs  read.rs  search.rs  send.rs  status.rs  sync.rs  trust.rs
did-registry/: did_resolver.py
dna/: dna.yaml
dna/integrity/: Cargo.toml
dna/integrity/.cargo/: config.toml
dna/integrity/src/: lib.rs
dna/zomes/mail_messages/: Cargo.toml
dna/zomes/mail_messages/src/: lib.rs
dna/zomes/trust_filter/: Cargo.toml
dna/zomes/trust_filter/src/: lib.rs
matl-bridge/: matl_sync.py
smtp-bridge/: matl_bridge.py
tests/: integration_test_suite.py
