[package]
name = "mail_messages"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# Empty workspace to prevent being included in parent workspace
[workspace]

[dependencies]
hdk = "0.5.6"
serde = { version = "1.0", features = ["derive"] }
holochain_serialized_bytes = "0.0.56"
mycelix_mail_integrity = { path = "../../integrity" }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
overflow-checks = true
